components/smee/staging/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: smee
  annotations:
    haproxy.router.openshift.io/timeout: 86410s
    router.openshift.io/haproxy.health.check.interval: 86400s
    # The IP whitelist below allows getting webhook traffic from GitHub [1],
    # GitLab.com [2] and our internal cluster.
    #
    # [1]: https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/about-githubs-ip-addresses
    # [2]: https://docs.gitlab.com/ee/user/gitlab_com/#ip-range
    #
    # Note that the configuration string below is very sensitive. It has to be
    # a single-space-separated list of IPs and CIDR ranges. Any extra whitespace
    # added to it makes OpenShift ignore it.
    haproxy.router.openshift.io/ip_whitelist: >-
      192.30.252.0/22
      185.199.108.0/22
      140.82.112.0/20
      143.55.64.0/20
      2a0a:a440::/29
      2606:50c0::/32
      34.74.90.64/28
      34.74.226.0/24
      34.200.130.154
      44.221.157.128
      54.162.238.133
spec:
  port:
    targetPort: "http"
  to:
    kind: Service
    name: smee
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
